--- a/nodesnim/core/enums.html
+++ b/nodesnim/core/enums.html
@@ -121,8 +121,8 @@ function main() {
   NODE2D_NODE, KINEMATIC_BODY_2D_NODE, BOX_NODE, BUTTON_NODE, COLOR_RECT_NODE,
   CONTROL_NODE, COUNTER_NODE, EDIT_TEXT_NODE, GRID_BOX_NODE, HBOX_NODE, LABEL_NODE,
   POPUP_NODE, PROGRESS_BAR_NODE, RICH_EDIT_TEXT_NODE, RICH_LABEL_NODE, SCROLL_NODE,
-  SLIDER_NODE, SWITCH_NODE, TEXTURE_BUTTON_NODE, TEXTURE_PROGRESS_BAR_NODE,
-  TEXTURE_RECT_NODE, VBOX_NODE, VPROGRESS_BAR_NODE, VSLIDER_NODE"><wbr />Node<wbr />Kind<span class="attachedType"></span></a></li>
+  SLIDER_NODE, TEXTURE_BUTTON_NODE, TEXTURE_PROGRESS_BAR_NODE, TEXTURE_RECT_NODE,
+  VBOX_NODE, VPROGRESS_BAR_NODE, VSLIDER_NODE"><wbr />Node<wbr />Kind<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -173,8 +173,8 @@ function main() {
   <span class="Identifier">NODE2D_NODE</span><span class="Other">,</span> <span class="Identifier">KINEMATIC_BODY_2D_NODE</span><span class="Other">,</span> <span class="Identifier">BOX_NODE</span><span class="Other">,</span> <span class="Identifier">BUTTON_NODE</span><span class="Other">,</span> <span class="Identifier">COLOR_RECT_NODE</span><span class="Other">,</span>
   <span class="Identifier">CONTROL_NODE</span><span class="Other">,</span> <span class="Identifier">COUNTER_NODE</span><span class="Other">,</span> <span class="Identifier">EDIT_TEXT_NODE</span><span class="Other">,</span> <span class="Identifier">GRID_BOX_NODE</span><span class="Other">,</span> <span class="Identifier">HBOX_NODE</span><span class="Other">,</span> <span class="Identifier">LABEL_NODE</span><span class="Other">,</span>
   <span class="Identifier">POPUP_NODE</span><span class="Other">,</span> <span class="Identifier">PROGRESS_BAR_NODE</span><span class="Other">,</span> <span class="Identifier">RICH_EDIT_TEXT_NODE</span><span class="Other">,</span> <span class="Identifier">RICH_LABEL_NODE</span><span class="Other">,</span> <span class="Identifier">SCROLL_NODE</span><span class="Other">,</span>
-  <span class="Identifier">SLIDER_NODE</span><span class="Other">,</span> <span class="Identifier">SWITCH_NODE</span><span class="Other">,</span> <span class="Identifier">TEXTURE_BUTTON_NODE</span><span class="Other">,</span> <span class="Identifier">TEXTURE_PROGRESS_BAR_NODE</span><span class="Other">,</span>
-  <span class="Identifier">TEXTURE_RECT_NODE</span><span class="Other">,</span> <span class="Identifier">VBOX_NODE</span><span class="Other">,</span> <span class="Identifier">VPROGRESS_BAR_NODE</span><span class="Other">,</span> <span class="Identifier">VSLIDER_NODE</span></pre></dt>
+  <span class="Identifier">SLIDER_NODE</span><span class="Other">,</span> <span class="Identifier">TEXTURE_BUTTON_NODE</span><span class="Other">,</span> <span class="Identifier">TEXTURE_PROGRESS_BAR_NODE</span><span class="Other">,</span> <span class="Identifier">TEXTURE_RECT_NODE</span><span class="Other">,</span>
+  <span class="Identifier">VBOX_NODE</span><span class="Other">,</span> <span class="Identifier">VPROGRESS_BAR_NODE</span><span class="Other">,</span> <span class="Identifier">VSLIDER_NODE</span></pre></dt>
 <dd>
 
 
@@ -190,7 +190,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:44:42 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 15:28:43 UTC</small>
       </div>
     </div>
   </div>
