--- a/nodesnim/nodes/audio_stream_player.html
+++ b/nodesnim/nodes/audio_stream_player.html
@@ -119,16 +119,18 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#AudioStreamPlayer%2Cstring"
-    title="AudioStreamPlayer(name: string = &quot;AudioStreamPlayer&quot;): AudioStreamPlayerPtr"><wbr />Audio<wbr />Stream<wbr />Player<span class="attachedType">AudioStreamPlayerPtr</span></a></li>
+      <li><a class="reference" href="#AudioStreamPlayer%2Cstring%2CAudioStreamPlayerObj"
+    title="AudioStreamPlayer(name: string; variable: var AudioStreamPlayerObj): AudioStreamPlayerPtr"><wbr />Audio<wbr />Stream<wbr />Player<span class="attachedType">AudioStreamPlayerPtr</span></a></li>
+  <li><a class="reference" href="#AudioStreamPlayer%2CAudioStreamPlayerObj"
+    title="AudioStreamPlayer(variable: var AudioStreamPlayerObj): AudioStreamPlayerPtr"><wbr />Audio<wbr />Stream<wbr />Player<span class="attachedType">AudioStreamPlayerPtr</span></a></li>
 
   </ul>
 </li>
 <li>
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#duplicate.e%2CAudioStreamPlayerPtr"
-    title="duplicate(self: AudioStreamPlayerPtr): AudioStreamPlayerPtr"><wbr />duplicate<span class="attachedType">AudioStreamPlayerPtr</span></a></li>
+      <li><a class="reference" href="#duplicate.e%2CAudioStreamPlayerPtr%2CAudioStreamPlayerObj"
+    title="duplicate(self: AudioStreamPlayerPtr; obj: var AudioStreamPlayerObj): AudioStreamPlayerPtr"><wbr />duplicate<span class="attachedType">AudioStreamPlayerPtr</span></a></li>
   <li><a class="reference" href="#pause.e%2CAudioStreamPlayerPtr"
     title="pause(self: AudioStreamPlayerPtr)"><wbr />pause<span class="attachedType">AudioStreamPlayerPtr</span></a></li>
   <li><a class="reference" href="#play.e%2CAudioStreamPlayerPtr"
@@ -181,18 +183,37 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="AudioStreamPlayer,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#AudioStreamPlayer%2Cstring"><span class="Identifier">AudioStreamPlayer</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;AudioStreamPlayer&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="audio_stream_player.html#AudioStreamPlayerPtr"><span class="Identifier">AudioStreamPlayerPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+<a id="AudioStreamPlayer,string,AudioStreamPlayerObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#AudioStreamPlayer%2Cstring%2CAudioStreamPlayerObj"><span class="Identifier">AudioStreamPlayer</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="audio_stream_player.html#AudioStreamPlayerObj"><span class="Identifier">AudioStreamPlayerObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="audio_stream_player.html#AudioStreamPlayerPtr"><span class="Identifier">AudioStreamPlayerPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new AudioStreamPlayer pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is an AudioStreamPlayerObj variable</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">audio</span> <span class="Other">=</span> <span class="Identifier">AudioStreamPlayer</span><span class="Other">(</span><span class="StringLit">&quot;AudioStreamPlayer&quot;</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">audio_obj</span><span class="Other">:</span> <span class="Identifier">AudioStreamPlayerObj</span>
+  <span class="Identifier">audio</span> <span class="Other">=</span> <span class="Identifier">AudioStreamPlayer</span><span class="Other">(</span><span class="StringLit">&quot;AudioStreamPlayer&quot;</span><span class="Other">,</span> <span class="Identifier">audio_obj</span><span class="Other">)</span></pre>
+
+</dd>
+<a id="AudioStreamPlayer,AudioStreamPlayerObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#AudioStreamPlayer%2CAudioStreamPlayerObj"><span class="Identifier">AudioStreamPlayer</span></a><span class="Other">(</span><span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="audio_stream_player.html#AudioStreamPlayerObj"><span class="Identifier">AudioStreamPlayerObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="audio_stream_player.html#AudioStreamPlayerPtr"><span class="Identifier">AudioStreamPlayerPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Creates a new AudioStreamPlayer pointer width default name &quot;AudioStreamPlayer&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is an AudioStreamPlayerObj variable</li>
+</ul>
+
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">audio_obj</span><span class="Other">:</span> <span class="Identifier">AudioStreamPlayerObj</span>
+  <span class="Identifier">audio</span> <span class="Other">=</span> <span class="Identifier">AudioStreamPlayer</span><span class="Other">(</span><span class="Identifier">audio_obj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -200,9 +221,9 @@ function main() {
 <div class="section" id="14">
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
-<a id="duplicate.e,AudioStreamPlayerPtr"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CAudioStreamPlayerPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="audio_stream_player.html#AudioStreamPlayerPtr"><span class="Identifier">AudioStreamPlayerPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="audio_stream_player.html#AudioStreamPlayerPtr"><span class="Identifier">AudioStreamPlayerPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,AudioStreamPlayerPtr,AudioStreamPlayerObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CAudioStreamPlayerPtr%2CAudioStreamPlayerObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="audio_stream_player.html#AudioStreamPlayerPtr"><span class="Identifier">AudioStreamPlayerPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="audio_stream_player.html#AudioStreamPlayerObj"><span class="Identifier">AudioStreamPlayerObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="audio_stream_player.html#AudioStreamPlayerPtr"><span class="Identifier">AudioStreamPlayerPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates AudioStreamPlayer object and create a new AudioStreamPlayer pointer.
@@ -250,7 +271,7 @@ Resume stream.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:44:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 15:28:50 UTC</small>
       </div>
     </div>
   </div>
