--- a/nodesnim/nodes2d/kinematic_body2d.html
+++ b/nodesnim/nodes2d/kinematic_body2d.html
@@ -118,8 +118,10 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#KinematicBody2D%2Cstring"
-    title="KinematicBody2D(name: string = &quot;KinematicBody2D&quot;): KinematicBody2DPtr"><wbr />Kinematic<wbr />Body2D<span class="attachedType">KinematicBody2DPtr</span></a></li>
+      <li><a class="reference" href="#KinematicBody2D%2Cstring%2CKinematicBody2DObj"
+    title="KinematicBody2D(name: string; variable: var KinematicBody2DObj): KinematicBody2DPtr"><wbr />Kinematic<wbr />Body2D<span class="attachedType">KinematicBody2DPtr</span></a></li>
+  <li><a class="reference" href="#KinematicBody2D%2CKinematicBody2DObj"
+    title="KinematicBody2D(obj: var KinematicBody2DObj): KinematicBody2DPtr"><wbr />Kinematic<wbr />Body2D<span class="attachedType">KinematicBody2DObj</span></a></li>
 
   </ul>
 </li>
@@ -132,8 +134,8 @@ function main() {
     title="getCollideCount(self: KinematicBody2DPtr): int"><wbr />get<wbr />Collide<wbr />Count<span class="attachedType">KinematicBody2DPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CKinematicBody2DPtr%2CGLfloat%2CGLfloat"
     title="draw(self: KinematicBody2DPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">KinematicBody2DPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CKinematicBody2DPtr"
-    title="duplicate(self: KinematicBody2DPtr): KinematicBody2DPtr"><wbr />duplicate<span class="attachedType">KinematicBody2DPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CKinematicBody2DPtr%2CKinematicBody2DObj"
+    title="duplicate(self: KinematicBody2DPtr; obj: var KinematicBody2DObj): KinematicBody2DPtr"><wbr />duplicate<span class="attachedType">KinematicBody2DPtr</span></a></li>
   <li><a class="reference" href="#isCollide.e%2CKinematicBody2DPtr"
     title="isCollide(self: KinematicBody2DPtr): bool"><wbr />is<wbr />Collide<span class="attachedType">KinematicBody2DPtr</span></a></li>
   <li><a class="reference" href="#moveAndCollide.e%2CKinematicBody2DPtr%2CVector2Ref"
@@ -179,8 +181,8 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="KinematicBody2D,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#KinematicBody2D%2Cstring"><span class="Identifier">KinematicBody2D</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;KinematicBody2D&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DPtr"><span class="Identifier">KinematicBody2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+<a id="KinematicBody2D,string,KinematicBody2DObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#KinematicBody2D%2Cstring%2CKinematicBody2DObj"><span class="Identifier">KinematicBody2D</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="kinematic_body2d.html#KinematicBody2DObj"><span class="Identifier">KinematicBody2DObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DPtr"><span class="Identifier">KinematicBody2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -191,7 +193,25 @@ function main() {
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">KinematicBody2D</span><span class="Other">(</span><span class="StringLit">&quot;KinematicBody2D&quot;</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">KinematicBody2DObj</span>
+  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">KinematicBody2D</span><span class="Other">(</span><span class="StringLit">&quot;KinematicBody2D&quot;</span><span class="Other">,</span> <span class="Identifier">node_obj</span><span class="Other">)</span></pre>
+
+</dd>
+<a id="KinematicBody2D,KinematicBody2DObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#KinematicBody2D%2CKinematicBody2DObj"><span class="Identifier">KinematicBody2D</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="kinematic_body2d.html#KinematicBody2DObj"><span class="Identifier">KinematicBody2DObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DPtr"><span class="Identifier">KinematicBody2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span>
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Creates a new KinematicBody2D pointer with deffault node name &quot;KinematicBody2D&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a KinematicBody2DObj variable.</li>
+</ul>
+
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">KinematicBody2DObj</span>
+  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">KinematicBody2D</span><span class="Other">(</span><span class="Identifier">node_obj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -222,9 +242,9 @@ Checks collision count.
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,KinematicBody2DPtr"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CKinematicBody2DPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DPtr"><span class="Identifier">KinematicBody2DPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DPtr"><span class="Identifier">KinematicBody2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,KinematicBody2DPtr,KinematicBody2DObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CKinematicBody2DPtr%2CKinematicBody2DObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DPtr"><span class="Identifier">KinematicBody2DPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="kinematic_body2d.html#KinematicBody2DObj"><span class="Identifier">KinematicBody2DObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="kinematic_body2d.html#KinematicBody2DPtr"><span class="Identifier">KinematicBody2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates KinematicBody2D and create a new KinematicBody2D pointer.
@@ -260,7 +280,7 @@ Checks any collision and return <tt class="docutils literal"><span class="pre">t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:45:35 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 15:29:35 UTC</small>
       </div>
     </div>
   </div>
