--- a/nodesnim/nodes2d/node2d.html
+++ b/nodesnim/nodes2d/node2d.html
@@ -118,8 +118,10 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Node2D%2Cstring"
-    title="Node2D(name: string = &quot;Node2D&quot;): Node2DPtr"><wbr />Node2D<span class="attachedType">Node2DPtr</span></a></li>
+      <li><a class="reference" href="#Node2D%2Cstring%2CNode2DObj"
+    title="Node2D(name: string; variable: var Node2DObj): Node2DPtr"><wbr />Node2D<span class="attachedType">Node2DPtr</span></a></li>
+  <li><a class="reference" href="#Node2D%2CNode2DObj"
+    title="Node2D(obj: var Node2DObj): Node2DPtr"><wbr />Node2D<span class="attachedType">Node2DObj</span></a></li>
 
   </ul>
 </li>
@@ -132,8 +134,8 @@ function main() {
     title="move(self: Node2DPtr; x, y: float)"><wbr />move<span class="attachedType">Node2DPtr</span></a></li>
   <li><a class="reference" href="#move.e%2CNode2DPtr%2CVector2Ref"
     title="move(self: Node2DPtr; vec2: Vector2Ref)"><wbr />move<span class="attachedType">Node2DPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CNode2DPtr"
-    title="duplicate(self: Node2DPtr): Node2DPtr"><wbr />duplicate<span class="attachedType">Node2DPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CNode2DPtr%2CNode2DObj"
+    title="duplicate(self: Node2DPtr; obj: var Node2DObj): Node2DPtr"><wbr />duplicate<span class="attachedType">Node2DPtr</span></a></li>
   <li><a class="reference" href="#getGlobalMousePosition.e%2CNode2DPtr"
     title="getGlobalMousePosition(self: Node2DPtr): Vector2Ref"><wbr />get<wbr />Global<wbr />Mouse<wbr />Position<span class="attachedType">Node2DPtr</span></a></li>
   <li><a class="reference" href="#setZIndex.e%2CNode2DPtr%2Cint"
@@ -187,17 +189,35 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Node2D,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Node2D%2Cstring"><span class="Identifier">Node2D</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Node2D&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="node2d.html#Node2DPtr"><span class="Identifier">Node2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Node2D,string,Node2DObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Node2D%2Cstring%2CNode2DObj"><span class="Identifier">Node2D</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="node2d.html#Node2DObj"><span class="Identifier">Node2DObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="node2d.html#Node2DPtr"><span class="Identifier">Node2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Node2D pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a Node2DObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">Node2D</span><span class="Other">(</span><span class="StringLit">&quot;Node2D&quot;</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">Node2DObj</span>
+  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">Node2D</span><span class="Other">(</span><span class="StringLit">&quot;Node2D&quot;</span><span class="Other">,</span> <span class="Identifier">node_obj</span><span class="Other">)</span></pre>
+
+</dd>
+<a id="Node2D,Node2DObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Node2D%2CNode2DObj"><span class="Identifier">Node2D</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="node2d.html#Node2DObj"><span class="Identifier">Node2DObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="node2d.html#Node2DPtr"><span class="Identifier">Node2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Creates a new Node2D pointer with deffault node name &quot;Node2D&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a Node2DObj variable.</li>
+</ul>
+
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">Node2DObj</span>
+  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">Node2D</span><span class="Other">(</span><span class="Identifier">node_obj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -226,8 +246,9 @@ Moves Node2D object by <tt class="docutils literal"><span class="pre">x</span></
 Moves Node2D object by <tt class="docutils literal"><span class="pre">vec2</span></tt>.
 
 </dd>
-<a id="duplicate.e,Node2DPtr"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CNode2DPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="node2d.html#Node2DPtr"><span class="Identifier">Node2DPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="node2d.html#Node2DPtr"><span class="Identifier">Node2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,Node2DPtr,Node2DObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CNode2DPtr%2CNode2DObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="node2d.html#Node2DPtr"><span class="Identifier">Node2DPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="node2d.html#Node2DObj"><span class="Identifier">Node2DObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="node2d.html#Node2DPtr"><span class="Identifier">Node2DPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Node2D object and create a new Node2D pointer.
@@ -270,7 +291,7 @@ Changes Z index.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:45:26 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 15:29:27 UTC</small>
       </div>
     </div>
   </div>
