--- a/nodesnim/nodescontrol/edittext.html
+++ b/nodesnim/nodescontrol/edittext.html
@@ -130,8 +130,10 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#EditText%2Cstring"
-    title="EditText(name: string = &quot;EditText&quot;): EditTextPtr"><wbr />Edit<wbr />Text<span class="attachedType">EditTextPtr</span></a></li>
+      <li><a class="reference" href="#EditText%2Cstring%2CEditTextObj"
+    title="EditText(name: string; variable: var EditTextObj): EditTextPtr"><wbr />Edit<wbr />Text<span class="attachedType">EditTextPtr</span></a></li>
+  <li><a class="reference" href="#EditText%2CEditTextObj"
+    title="EditText(obj: var EditTextObj): EditTextPtr"><wbr />Edit<wbr />Text<span class="attachedType">EditTextObj</span></a></li>
 
   </ul>
 </li>
@@ -152,22 +154,16 @@ function main() {
     title="getWordUnderMouse(self: EditTextPtr): string"><wbr />get<wbr />Word<wbr />Under<wbr />Mouse<span class="attachedType">EditTextPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CEditTextPtr%2CGLfloat%2CGLfloat"
     title="draw(self: EditTextPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">EditTextPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CEditTextPtr"
-    title="duplicate(self: EditTextPtr): EditTextPtr"><wbr />duplicate<span class="attachedType">EditTextPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CEditTextPtr%2CEditTextObj"
+    title="duplicate(self: EditTextPtr; obj: var EditTextObj): EditTextPtr"><wbr />duplicate<span class="attachedType">EditTextPtr</span></a></li>
   <li><a class="reference" href="#handle.e%2CEditTextPtr%2CInputEvent%2CNodePtr"
     title="handle(self: EditTextPtr; event: InputEvent; mouse_on: var NodePtr)"><wbr />handle<span class="attachedType">EditTextPtr</span></a></li>
-  <li><a class="reference" href="#setHintColor.e%2CEditTextPtr%2CColorRef"
-    title="setHintColor(self: EditTextPtr; value: ColorRef)"><wbr />set<wbr />Hint<wbr />Color<span class="attachedType">EditTextPtr</span></a></li>
-  <li><a class="reference" href="#setHintText.e%2CEditTextPtr%2Cstring"
-    title="setHintText(self: EditTextPtr; value: string)"><wbr />set<wbr />Hint<wbr />Text<span class="attachedType">EditTextPtr</span></a></li>
-  <li><a class="reference" href="#setText.e%2CEditTextPtr%2Cstring"
-    title="setText(self: EditTextPtr; value: string)"><wbr />set<wbr />Text<span class="attachedType">EditTextPtr</span></a></li>
-  <li><a class="reference" href="#setTextColor.e%2CEditTextPtr%2CColorRef"
-    title="setTextColor(self: EditTextPtr; value: ColorRef)"><wbr />set<wbr />Text<wbr />Color<span class="attachedType">EditTextPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CEditTextPtr%2CAnchorRef"
     title="setTextAlign(self: EditTextPtr; align: AnchorRef)"><wbr />set<wbr />Text<wbr />Align<span class="attachedType">EditTextPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CEditTextPtr%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
     title="setTextAlign(self: EditTextPtr; x1, y1, x2, y2: float)"><wbr />set<wbr />Text<wbr />Align<span class="attachedType">EditTextPtr</span></a></li>
+  <li><a class="reference" href="#setText.e%2CEditTextPtr%2Cstring"
+    title="setText(self: EditTextPtr; value: string)"><wbr />set<wbr />Text<span class="attachedType">EditTextPtr</span></a></li>
 
   </ul>
 </li>
@@ -221,17 +217,37 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="EditText,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#EditText%2Cstring"><span class="Identifier">EditText</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;EditText&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="EditText,string,EditTextObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#EditText%2Cstring%2CEditTextObj"><span class="Identifier">EditText</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="edittext.html#EditTextObj"><span class="Identifier">EditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new EditText pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a EditTextObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">edit</span> <span class="Other">=</span> <span class="Identifier">EditText</span><span class="Other">(</span><span class="StringLit">&quot;EditText&quot;</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">editobj</span><span class="Other">:</span> <span class="Identifier">EditTextObj</span>
+  <span class="Identifier">edit</span> <span class="Other">=</span> <span class="Identifier">EditText</span><span class="Other">(</span><span class="StringLit">&quot;EditText&quot;</span><span class="Other">,</span> <span class="Identifier">editobj</span><span class="Other">)</span></pre>
+
+</dd>
+<a id="EditText,EditTextObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#EditText%2CEditTextObj"><span class="Identifier">EditText</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="edittext.html#EditTextObj"><span class="Identifier">EditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Creates a new EditText pointer with default name &quot;EditText&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a EditTextObj variable.</li>
+</ul>
+
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">editobj</span><span class="Other">:</span> <span class="Identifier">EditTextObj</span>
+  <span class="Identifier">edit</span> <span class="Other">=</span> <span class="Identifier">EditText</span><span class="Other">(</span><span class="Identifier">editobj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -290,8 +306,9 @@ Returns words under mouse.
 This method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>
 
 </dd>
-<a id="duplicate.e,EditTextPtr"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CEditTextPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,EditTextPtr,EditTextObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CEditTextPtr%2CEditTextObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="edittext.html#EditTextObj"><span class="Identifier">EditTextObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates EditText object and create a new EditText pointer.
@@ -303,34 +320,6 @@ Duplicates EditText object and create a new EditText pointer.
 <dd>
 
 Handles user input. Thi uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
-
-</dd>
-<a id="setHintColor.e,EditTextPtr,ColorRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#setHintColor.e%2CEditTextPtr%2CColorRef"><span class="Identifier">setHintColor</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-Changes EditText hint color.
-
-</dd>
-<a id="setHintText.e,EditTextPtr,string"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#setHintText.e%2CEditTextPtr%2Cstring"><span class="Identifier">setHintText</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-Changes EditText hint text.
-
-</dd>
-<a id="setText.e,EditTextPtr,string"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#setText.e%2CEditTextPtr%2Cstring"><span class="Identifier">setText</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-Changes EditText text.
-
-</dd>
-<a id="setTextColor.e,EditTextPtr,ColorRef"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#setTextColor.e%2CEditTextPtr%2CColorRef"><span class="Identifier">setTextColor</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-Changes EditText text color.
 
 </dd>
 <a id="setTextAlign.e,EditTextPtr,AnchorRef"></a>
@@ -347,6 +336,13 @@ Changes text align.
 Changes text align.
 
 </dd>
+<a id="setText.e,EditTextPtr,string"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#setText.e%2CEditTextPtr%2Cstring"><span class="Identifier">setText</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextPtr"><span class="Identifier">EditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Changes EditText text.
+
+</dd>
 
 </dl></div>
 
@@ -357,7 +353,7 @@ Changes text align.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:45:04 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 15:29:05 UTC</small>
       </div>
     </div>
   </div>
