--- a/nodesnim/nodescontrol/grid_box.html
+++ b/nodesnim/nodescontrol/grid_box.html
@@ -118,8 +118,10 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#GridBox%2Cstring"
-    title="GridBox(name: string = &quot;GridBox&quot;): GridBoxPtr"><wbr />Grid<wbr />Box<span class="attachedType">GridBoxPtr</span></a></li>
+      <li><a class="reference" href="#GridBox%2Cstring%2CGridBoxObj"
+    title="GridBox(name: string; variable: var GridBoxObj): GridBoxPtr"><wbr />Grid<wbr />Box<span class="attachedType">GridBoxPtr</span></a></li>
+  <li><a class="reference" href="#GridBox%2CGridBoxObj"
+    title="GridBox(obj: var GridBoxObj): GridBoxPtr"><wbr />Grid<wbr />Box<span class="attachedType">GridBoxObj</span></a></li>
 
   </ul>
 </li>
@@ -134,8 +136,8 @@ function main() {
     title="addChild(self: GridBoxPtr; child: NodePtr)"><wbr />add<wbr />Child<span class="attachedType">GridBoxPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CGridBoxPtr%2CGLfloat%2CGLfloat"
     title="draw(self: GridBoxPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">GridBoxPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CGridBoxPtr"
-    title="duplicate(self: GridBoxPtr): GridBoxPtr"><wbr />duplicate<span class="attachedType">GridBoxPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CGridBoxPtr%2CGridBoxObj"
+    title="duplicate(self: GridBoxPtr; obj: var GridBoxObj): GridBoxPtr"><wbr />duplicate<span class="attachedType">GridBoxPtr</span></a></li>
   <li><a class="reference" href="#resize.e%2CGridBoxPtr%2CGLfloat%2CGLfloat"
     title="resize(self: GridBoxPtr; w, h: GLfloat)"><wbr />resize<span class="attachedType">GridBoxPtr</span></a></li>
   <li><a class="reference" href="#setRow.e%2CGridBoxPtr%2Cint"
@@ -183,17 +185,35 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="GridBox,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#GridBox%2Cstring"><span class="Identifier">GridBox</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;GridBox&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="grid_box.html#GridBoxPtr"><span class="Identifier">GridBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="GridBox,string,GridBoxObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#GridBox%2Cstring%2CGridBoxObj"><span class="Identifier">GridBox</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="grid_box.html#GridBoxObj"><span class="Identifier">GridBoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="grid_box.html#GridBoxPtr"><span class="Identifier">GridBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new GridBox pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a GridBoxObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">grid</span> <span class="Other">=</span> <span class="Identifier">GridBox</span><span class="Other">(</span><span class="StringLit">&quot;GridBox&quot;</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">gridobj</span><span class="Other">:</span> <span class="Identifier">GridBoxObj</span>
+  <span class="Identifier">grid</span> <span class="Other">=</span> <span class="Identifier">GridBox</span><span class="Other">(</span><span class="StringLit">&quot;GridBox&quot;</span><span class="Other">,</span> <span class="Identifier">gridobj</span><span class="Other">)</span></pre>
+
+</dd>
+<a id="GridBox,GridBoxObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#GridBox%2CGridBoxObj"><span class="Identifier">GridBox</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="grid_box.html#GridBoxObj"><span class="Identifier">GridBoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="grid_box.html#GridBoxPtr"><span class="Identifier">GridBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Creates a new GridBox pointer with defalut node name &quot;GridBox&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a GridBoxObj variable.</li>
+</ul>
+
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">gridobj</span><span class="Other">:</span> <span class="Identifier">GridBoxObj</span>
+  <span class="Identifier">grid</span> <span class="Other">=</span> <span class="Identifier">GridBox</span><span class="Other">(</span><span class="StringLit">&quot;GridBox&quot;</span><span class="Other">,</span> <span class="Identifier">gridobj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -234,8 +254,9 @@ Returns size with all childs.
 This method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,GridBoxPtr"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CGridBoxPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="grid_box.html#GridBoxPtr"><span class="Identifier">GridBoxPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="grid_box.html#GridBoxPtr"><span class="Identifier">GridBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,GridBoxPtr,GridBoxObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CGridBoxPtr%2CGridBoxObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="grid_box.html#GridBoxPtr"><span class="Identifier">GridBoxPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="grid_box.html#GridBoxObj"><span class="Identifier">GridBoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="grid_box.html#GridBoxPtr"><span class="Identifier">GridBoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates GridBox object and create a new GridBox pointer.
@@ -277,7 +298,7 @@ Changes separator between child nodes.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:45:02 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 15:29:04 UTC</small>
       </div>
     </div>
   </div>
