--- a/nodesnim/nodescontrol/label.html
+++ b/nodesnim/nodescontrol/label.html
@@ -122,8 +122,10 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Label%2Cstring%2Cstring"
-    title="Label(name: string = &quot;Label&quot;; text: string = &quot;&quot;): LabelPtr"><wbr />Label<span class="attachedType">LabelPtr</span></a></li>
+      <li><a class="reference" href="#Label%2Cstring%2CLabelObj"
+    title="Label(name: string; variable: var LabelObj): LabelPtr"><wbr />Label<span class="attachedType">LabelPtr</span></a></li>
+  <li><a class="reference" href="#Label%2CLabelObj"
+    title="Label(obj: var LabelObj): LabelPtr"><wbr />Label<span class="attachedType">LabelObj</span></a></li>
 
   </ul>
 </li>
@@ -132,8 +134,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CLabelPtr%2CGLfloat%2CGLfloat"
     title="draw(self: LabelPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">LabelPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CLabelPtr"
-    title="duplicate(self: LabelPtr): LabelPtr"><wbr />duplicate<span class="attachedType">LabelPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CLabelPtr%2CLabelObj"
+    title="duplicate(self: LabelPtr; obj: var LabelObj): LabelPtr"><wbr />duplicate<span class="attachedType">LabelPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CLabelPtr%2CAnchorRef"
     title="setTextAlign(self: LabelPtr; align: AnchorRef)"><wbr />set<wbr />Text<wbr />Align<span class="attachedType">LabelPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CLabelPtr%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
@@ -185,17 +187,35 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Label,string,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Label%2Cstring%2Cstring"><span class="Identifier">Label</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Label&quot;</span><span class="Other">;</span> <span class="Identifier">text</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="label.html#LabelPtr"><span class="Identifier">LabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Label,string,LabelObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Label%2Cstring%2CLabelObj"><span class="Identifier">Label</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="label.html#LabelObj"><span class="Identifier">LabelObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="label.html#LabelPtr"><span class="Identifier">LabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Label pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a LabelObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">Label</span><span class="Other">(</span><span class="StringLit">&quot;Label&quot;</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">textobj</span><span class="Other">:</span> <span class="Identifier">LabelObj</span>
+  <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">Label</span><span class="Other">(</span><span class="StringLit">&quot;Label&quot;</span><span class="Other">,</span> <span class="Identifier">textobj</span><span class="Other">)</span></pre>
+
+</dd>
+<a id="Label,LabelObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Label%2CLabelObj"><span class="Identifier">Label</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="label.html#LabelObj"><span class="Identifier">LabelObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="label.html#LabelPtr"><span class="Identifier">LabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Creates a new Labelpointer with default node name &quot;Label&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a LabelObj variable.</li>
+</ul>
+
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">textobj</span><span class="Other">:</span> <span class="Identifier">LabelObj</span>
+  <span class="Identifier">text</span> <span class="Other">=</span> <span class="Identifier">Label</span><span class="Other">(</span><span class="Identifier">textobj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -211,8 +231,8 @@ function main() {
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,LabelPtr"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CLabelPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="label.html#LabelPtr"><span class="Identifier">LabelPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="label.html#LabelPtr"><span class="Identifier">LabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,LabelPtr,LabelObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CLabelPtr%2CLabelObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="label.html#LabelPtr"><span class="Identifier">LabelPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="label.html#LabelObj"><span class="Identifier">LabelObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="label.html#LabelPtr"><span class="Identifier">LabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Label object and create a new Label pointer.
@@ -249,7 +269,7 @@ Changes Label text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:44:55 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 15:28:56 UTC</small>
       </div>
     </div>
   </div>
