--- a/nodesnim/nodescontrol/scroll.html
+++ b/nodesnim/nodescontrol/scroll.html
@@ -122,8 +122,10 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Scroll%2Cstring"
-    title="Scroll(name: string = &quot;Scroll&quot;): ScrollPtr"><wbr />Scroll<span class="attachedType">ScrollPtr</span></a></li>
+      <li><a class="reference" href="#Scroll%2Cstring%2CScrollObj"
+    title="Scroll(name: string; variable: var ScrollObj): ScrollPtr"><wbr />Scroll<span class="attachedType">ScrollPtr</span></a></li>
+  <li><a class="reference" href="#Scroll%2CScrollObj"
+    title="Scroll(obj: var ScrollObj): ScrollPtr"><wbr />Scroll<span class="attachedType">ScrollObj</span></a></li>
 
   </ul>
 </li>
@@ -132,8 +134,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#addChild.e%2CScrollPtr%2CNodePtr"
     title="addChild(self: ScrollPtr; other: NodePtr)"><wbr />add<wbr />Child<span class="attachedType">ScrollPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CScrollPtr"
-    title="duplicate(self: ScrollPtr): ScrollPtr"><wbr />duplicate<span class="attachedType">ScrollPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CScrollPtr%2CScrollObj"
+    title="duplicate(self: ScrollPtr; obj: var ScrollObj): ScrollPtr"><wbr />duplicate<span class="attachedType">ScrollPtr</span></a></li>
   <li><a class="reference" href="#resize.e%2CScrollPtr%2CGLfloat%2CGLfloat"
     title="resize(canvas: ScrollPtr; w, h: GLfloat)"><wbr />resize<span class="attachedType">ScrollPtr</span></a></li>
   <li><a class="reference" href="#draw.e%2CScrollPtr%2CGLfloat%2CGLfloat"
@@ -191,17 +193,35 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Scroll,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Scroll%2Cstring"><span class="Identifier">Scroll</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Scroll&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="scroll.html#ScrollPtr"><span class="Identifier">ScrollPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Scroll,string,ScrollObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Scroll%2Cstring%2CScrollObj"><span class="Identifier">Scroll</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="scroll.html#ScrollObj"><span class="Identifier">ScrollObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scroll.html#ScrollPtr"><span class="Identifier">ScrollPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Scroll pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a ScrollObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">sc</span> <span class="Other">=</span> <span class="Identifier">Scroll</span><span class="Other">(</span><span class="StringLit">&quot;Scroll&quot;</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">scobj</span><span class="Other">:</span> <span class="Identifier">ScrollObj</span>
+  <span class="Identifier">sc</span> <span class="Other">=</span> <span class="Identifier">Scroll</span><span class="Other">(</span><span class="StringLit">&quot;Scroll&quot;</span><span class="Other">,</span> <span class="Identifier">scobj</span><span class="Other">)</span></pre>
+
+</dd>
+<a id="Scroll,ScrollObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Scroll%2CScrollObj"><span class="Identifier">Scroll</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="scroll.html#ScrollObj"><span class="Identifier">ScrollObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scroll.html#ScrollPtr"><span class="Identifier">ScrollPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Creates a new Scroll pointer with default name &quot;Scroll&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a ScrollObj variable.</li>
+</ul>
+
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">scobj</span><span class="Other">:</span> <span class="Identifier">ScrollObj</span>
+  <span class="Identifier">sc</span> <span class="Other">=</span> <span class="Identifier">Scroll</span><span class="Other">(</span><span class="Identifier">scobj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -220,8 +240,9 @@ function main() {
 
 
 </dd>
-<a id="duplicate.e,ScrollPtr"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CScrollPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="scroll.html#ScrollPtr"><span class="Identifier">ScrollPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scroll.html#ScrollPtr"><span class="Identifier">ScrollPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,ScrollPtr,ScrollObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CScrollPtr%2CScrollObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="scroll.html#ScrollPtr"><span class="Identifier">ScrollPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="scroll.html#ScrollObj"><span class="Identifier">ScrollObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="scroll.html#ScrollPtr"><span class="Identifier">ScrollPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Scroll object and create a new Scroll pointer.
@@ -286,7 +307,7 @@ handles user input. This uses in the <tt class="docutils literal"><span class="p
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:45:09 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 15:29:10 UTC</small>
       </div>
     </div>
   </div>
