--- a/nodesnim/nodescontrol/texture_rect.html
+++ b/nodesnim/nodescontrol/texture_rect.html
@@ -121,8 +121,10 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#TextureRect%2Cstring"
-    title="TextureRect(name: string = &quot;TextureRect&quot;): TextureRectPtr"><wbr />Texture<wbr />Rect<span class="attachedType">TextureRectPtr</span></a></li>
+      <li><a class="reference" href="#TextureRect%2Cstring%2CTextureRectObj"
+    title="TextureRect(name: string; variable: var TextureRectObj): TextureRectPtr"><wbr />Texture<wbr />Rect<span class="attachedType">TextureRectPtr</span></a></li>
+  <li><a class="reference" href="#TextureRect%2CTextureRectObj"
+    title="TextureRect(obj: var TextureRectObj): TextureRectPtr"><wbr />Texture<wbr />Rect<span class="attachedType">TextureRectObj</span></a></li>
 
   </ul>
 </li>
@@ -131,8 +133,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CTextureRectPtr%2CGLfloat%2CGLfloat"
     title="draw(self: TextureRectPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">TextureRectPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CTextureRectPtr"
-    title="duplicate(self: TextureRectPtr): TextureRectPtr"><wbr />duplicate<span class="attachedType">TextureRectPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CTextureRectPtr%2CTextureRectObj"
+    title="duplicate(self: TextureRectPtr; obj: var TextureRectObj): TextureRectPtr"><wbr />duplicate<span class="attachedType">TextureRectPtr</span></a></li>
   <li><a class="reference" href="#loadTexture.e%2CTextureRectPtr%2Ccstring"
     title="loadTexture(self: TextureRectPtr; file: cstring)"><wbr />load<wbr />Texture<span class="attachedType">TextureRectPtr</span></a></li>
   <li><a class="reference" href="#setTexture.e%2CTextureRectPtr%2CGlTextureObj"
@@ -187,17 +189,36 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="TextureRect,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#TextureRect%2Cstring"><span class="Identifier">TextureRect</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;TextureRect&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="TextureRect,string,TextureRectObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#TextureRect%2Cstring%2CTextureRectObj"><span class="Identifier">TextureRect</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="texture_rect.html#TextureRectObj"><span class="Identifier">TextureRectObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new TextureRect pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a TextureRectObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">texture</span> <span class="Other">=</span> <span class="Identifier">TextureRect</span><span class="Other">(</span><span class="StringLit">&quot;TextureRect&quot;</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">textureobj</span><span class="Other">:</span> <span class="Identifier">TextureRectObj</span>
+  <span class="Identifier">texture</span> <span class="Other">=</span> <span class="Identifier">TextureRect</span><span class="Other">(</span><span class="StringLit">&quot;TextureRect&quot;</span><span class="Other">,</span> <span class="Identifier">textureobj</span><span class="Other">)</span></pre>
+
+</dd>
+<a id="TextureRect,TextureRectObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#TextureRect%2CTextureRectObj"><span class="Identifier">TextureRect</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="texture_rect.html#TextureRectObj"><span class="Identifier">TextureRectObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Creates a new TextureRect pointer with default name &quot;TextureRect&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a TextureRectObj variable.</li>
+</ul>
+
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">textureobj</span><span class="Other">:</span> <span class="Identifier">TextureRectObj</span>
+  <span class="Identifier">texture</span> <span class="Other">=</span> <span class="Identifier">TextureRect</span><span class="Other">(</span><span class="Identifier">textureobj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -213,8 +234,9 @@ function main() {
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,TextureRectPtr"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CTextureRectPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,TextureRectPtr,TextureRectObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CTextureRectPtr%2CTextureRectObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="texture_rect.html#TextureRectObj"><span class="Identifier">TextureRectObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates TextureRect and create a new TextureRect pointer.
@@ -283,7 +305,7 @@ Changes texture anchor.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:44:53 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 15:28:55 UTC</small>
       </div>
     </div>
   </div>
