--- a/nodesnim/nodescontrol/vprogress_bar.html
+++ b/nodesnim/nodescontrol/vprogress_bar.html
@@ -119,8 +119,10 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#VProgressBar%2Cstring"
-    title="VProgressBar(name: string = &quot;VProgressBar&quot;): VProgressBarPtr"><wbr />VProgress<wbr />Bar<span class="attachedType">VProgressBarPtr</span></a></li>
+      <li><a class="reference" href="#VProgressBar%2Cstring%2CVProgressBarObj"
+    title="VProgressBar(name: string; variable: var VProgressBarObj): VProgressBarPtr"><wbr />VProgress<wbr />Bar<span class="attachedType">VProgressBarPtr</span></a></li>
+  <li><a class="reference" href="#VProgressBar%2CVProgressBarObj"
+    title="VProgressBar(obj: var VProgressBarObj): VProgressBarPtr"><wbr />VProgress<wbr />Bar<span class="attachedType">VProgressBarObj</span></a></li>
 
   </ul>
 </li>
@@ -129,8 +131,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CVProgressBarPtr%2CGLfloat%2CGLfloat"
     title="draw(self: VProgressBarPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">VProgressBarPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CVProgressBarPtr"
-    title="duplicate(self: VProgressBarPtr): VProgressBarPtr"><wbr />duplicate<span class="attachedType">VProgressBarPtr</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CVProgressBarPtr%2CVProgressBarObj"
+    title="duplicate(self: VProgressBarPtr; obj: var VProgressBarObj): VProgressBarPtr"><wbr />duplicate<span class="attachedType">VProgressBarPtr</span></a></li>
   <li><a class="reference" href="#setMaxValue.e%2CVProgressBarPtr%2Cuint"
     title="setMaxValue(self: VProgressBarPtr; value: uint)"><wbr />set<wbr />Max<wbr />Value<span class="attachedType">VProgressBarPtr</span></a></li>
   <li><a class="reference" href="#setProgress.e%2CVProgressBarPtr%2Cuint"
@@ -179,17 +181,37 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="VProgressBar,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#VProgressBar%2Cstring"><span class="Identifier">VProgressBar</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;VProgressBar&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="vprogress_bar.html#VProgressBarPtr"><span class="Identifier">VProgressBarPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="VProgressBar,string,VProgressBarObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#VProgressBar%2Cstring%2CVProgressBarObj"><span class="Identifier">VProgressBar</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vprogress_bar.html#VProgressBarObj"><span class="Identifier">VProgressBarObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vprogress_bar.html#VProgressBarPtr"><span class="Identifier">VProgressBarPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new VProgressBar pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
+<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a VProgressBarObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">progress</span> <span class="Other">=</span> <span class="Identifier">VProgressBar</span><span class="Other">(</span><span class="StringLit">&quot;VProgressBar&quot;</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">progressobj</span><span class="Other">:</span> <span class="Identifier">VProgressBarObj</span>
+  <span class="Identifier">progress</span> <span class="Other">=</span> <span class="Identifier">VProgressBar</span><span class="Other">(</span><span class="StringLit">&quot;VProgressBar&quot;</span><span class="Other">,</span> <span class="Identifier">progressobj</span><span class="Other">)</span></pre>
+
+</dd>
+<a id="VProgressBar,VProgressBarObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#VProgressBar%2CVProgressBarObj"><span class="Identifier">VProgressBar</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vprogress_bar.html#VProgressBarObj"><span class="Identifier">VProgressBarObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vprogress_bar.html#VProgressBarPtr"><span class="Identifier">VProgressBarPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Creates a new VProgressBar pointer with default node name &quot;VProgressBar&quot;.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a VProgressBarObj variable.</li>
+</ul>
+
+<p><strong class="examples_text">Examples:</strong></p>
+<pre class="listing"><span class="Keyword">var</span>
+  <span class="Identifier">progressobj</span><span class="Other">:</span> <span class="Identifier">VProgressBarObj</span>
+  <span class="Identifier">progress</span> <span class="Other">=</span> <span class="Identifier">VProgressBar</span><span class="Other">(</span><span class="Identifier">progressobj</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -205,8 +227,9 @@ function main() {
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,VProgressBarPtr"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CVProgressBarPtr"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="vprogress_bar.html#VProgressBarPtr"><span class="Identifier">VProgressBarPtr</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vprogress_bar.html#VProgressBarPtr"><span class="Identifier">VProgressBarPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="duplicate.e,VProgressBarPtr,VProgressBarObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CVProgressBarPtr%2CVProgressBarObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="vprogress_bar.html#VProgressBarPtr"><span class="Identifier">VProgressBarPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vprogress_bar.html#VProgressBarObj"><span class="Identifier">VProgressBarObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="vprogress_bar.html#VProgressBarPtr"><span class="Identifier">VProgressBarPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates VProgressBar object and create a new VProgressBar pointer.
@@ -244,7 +267,7 @@ Changes progress color. For change background color use <tt class="docutils lite
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 13:45:13 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 15:29:14 UTC</small>
       </div>
     </div>
   </div>
